video-app/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: video-app
    app.kubernetes.io/name: video-app
  name: video-app
  namespace: video-app
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: video-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: video-app
        app.kubernetes.io/name: video-app
    spec:
      containers:
      - image: docker.io/kyungsu77777/video-app:0.1.5
        imagePullPolicy: Always
        name: video-app
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
      volumes:
      - name: config-volume
        configMap:
          name: video-app-cm
